Move logic from main window to individual classes
Moved the error check logic from the Main Window class to the individual
pannel classes where the error is from. For example, log in errors are
now handled soely by the log in class.

Still need to implement functional interfaces.